unpackaged/main/default/objects/Implementation__c/Implementation__c.object-meta.xml
<CustomObject>
    <description>This implementation table to hold the transport details of cargo</description>
    <label>Implementation</label>
    <nameField>
        <label>Transportation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>