unpackaged/main/default/objects/Implementation__c/fields/Account_Imp_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Imp_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Imp Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Implementations</relationshipLabel>
    <relationshipName>Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>