unpackaged/main/default/objects/Implementation__c/fields/child_count__c.field-meta.xml
<CustomField>
    <fullName>child_count__c</fullName>
    <label>child count</label>
    <summaryForeignKey>Bookings__c.Imp_booking_rec__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>