unpackaged/main/default/objects/Implementation__c/fields/Company_case_link__c.field-meta.xml
<CustomField>
    <fullName>Company_case_link__c</fullName>
    <label>Company case link</label>
    <type>Url</type>
</CustomField>