unpackaged/main/default/objects/Implementation__c/fields/Discount_trans_charges__c.field-meta.xml
<CustomField>
    <fullName>Discount_trans_charges__c</fullName>
    <label>Discount  trans charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>