unpackaged/main/default/objects/Implementation__c/fields/Free_delivery__c.field-meta.xml
<CustomField>
    <fullName>Free_delivery__c</fullName>
    <formula>total_amt__c &gt;30000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free delivery</label>
    <type>Checkbox</type>
</CustomField>