unpackaged/main/default/objects/Implementation__c/fields/Imp_number__c.field-meta.xml
<CustomField>
    <fullName>Imp_number__c</fullName>
    <label>Imp number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>