unpackaged/main/default/objects/Implementation__c/fields/items__c.field-meta.xml
<CustomField>
    <fullName>items__c</fullName>
    <label>items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NET 50</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 80</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>