unpackaged/main/default/objects/Implementation__c/fields/Mode_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_payment__c</fullName>
    <label>Mode of payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Online pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>