unpackaged/main/default/objects/Implementation__c/fields/Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>Receipt_ID__c</fullName>
    <displayFormat>Rec-{0000}</displayFormat>
    <label>Receipt ID</label>
    <type>AutoNumber</type>
</CustomField>