unpackaged/main/default/objects/Implementation__c/fields/total_amt__c.field-meta.xml
<CustomField>
    <fullName>total_amt__c</fullName>
    <formula>transport_total_cost__c - (transport_total_cost__c  *  Discount_trans_charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>total amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>