unpackaged/main/default/objects/Implementation__c/fields/Transport_charges_paid__c.field-meta.xml
<CustomField>
    <fullName>Transport_charges_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if check the box for transportation charges received from vendor</inlineHelpText>
    <label>Transport charges paid</label>
    <type>Checkbox</type>
</CustomField>