unpackaged/main/default/objects/Implementation__c/fields/transport_total_cost__c.field-meta.xml
<CustomField>
    <fullName>transport_total_cost__c</fullName>
    <label>transport total cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>