unpackaged/main/default/objects/Implementation__c/fields/Vechicle_code__c.field-meta.xml
<CustomField>
    <fullName>Vechicle_code__c</fullName>
    <label>Vechicle code</label>
    <length>15</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>