unpackaged/main/default/objects/Implementation__c/fields/Vendor_phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_phone__c</fullName>
    <label>Vendor phone</label>
    <type>Phone</type>
</CustomField>