unpackaged/main/default/objects/Implementation__c/recordTypes/MKT_RT.recordType-meta.xml
<RecordType>
    <fullName>MKT_RT</fullName>
    <active>true</active>
    <label>MKT RT</label>
</RecordType>