unpackaged/main/default/objects/Implementation__c/recordTypes/sales_RT.recordType-meta.xml
<RecordType>
    <fullName>sales_RT</fullName>
    <active>true</active>
    <label>sales RT</label>
</RecordType>